@@ -34,6 +34,8 @@ Not yet released.
 - #162: allow pre- and postprocessors to indicate that no change has occurred.
 - #170: respond with correct HTTP status codes when a query for a single
    instance results in none or multiple instances.
+- #174: allow dynamically loaded relationships for automatically exposed URLs
+   of related instances.
 
 Version 0.9.3
 -------------
